--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1049,14 +1049,15 @@ the website, in dark theme
     row-gap: 4.5rem;
   }
   .home__social-follow {
-    font-size: var(--small-font-size);
+    font-size: 1.25rem;
+    margin-botton: 30px;
   }
   .home__social-follow::after {
     width: 1.5rem;
     right: -60%;
   }
   .home__social-link {
-    font-size: 1.15rem;
+    font-size: 2.0rem;
   }
 
   .about__container {
